--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <ul>
                                         <li class="header__menu-submenu-list--mobile"><a
                                                 href="https://hadishanazari.github.io/laminet4/">کارتن لمینتی</a></li>
-                                        <li class="header__menu-submenu-list--mobile"><a href="">کارتن چاپی</a></li>
+                                        <li class="header__menu-submenu-list--mobile"><a href="https://hadishanazari.github.io/chapy/">کارتن چاپی</a></li>
                                         <li class="header__menu-submenu-list--mobile"><a href="">کارتن سه لایه</a></li>
                                         <li class="header__menu-submenu-list--mobile"><a href="">کارتن پنج لایه</a></li>
                                     </ul>
