--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <div class="header__menu-line"></div>
                                 <ul class="header__menu-submenu">
                                     <li><a href="https://hadishanazari.github.io/laminet4/">کارتن لمینتی</a></li>
-                                    <li><a href="">کارتن چاپی</a></li>
+                                    <li><a href="https://hadishanazari.github.io/chapy/">کارتن چاپی</a></li>
                                     <li><a href="">کارتن سه لایه</a></li>
                                     <li><a href="">کارتن پنج لایه</a></li>
                                 </ul>
